# ScrollCert_vOmega_PublicDemo

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
controls/: negative_control.json
docs/: example_output.txt  overview.md  protocol_vomega.md
preregister/: ablation.json  claim.json
scripts/: mint_ids.py
src/: aeq_cid.py  blind.py  gates.py  hash_utils.py  run.py
tests/: README.md  test_smoke.py
